<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YEP!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity_tabbed">MainActivityTabbed</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signup_text">don\'t have an account? Sign up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_hint">email</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="LoginButton_text">SIGN IN</string>
    <string name="backimage_description">Purple background with origami frog</string>
    <string name="subtitle_string">UEM handycrafted</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="buttonDivider">Button divider</string>

</resources>
