<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.ramiro.ernesto.qizit.SignupActivity">
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage" />



    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle" />

    <LinearLayout
        android:id="@+id/keysLayout"
        style="@style/AuthFieldContainer">

    <EditText
        android:id="@+id/usernamefield"
        android:hint="@string/username_hint"
        style="@style/AuthEditText"
        tools:focusable="false">
        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/passwordfield"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        style="@style/AuthEditText"

/>

    <EditText
        android:id="@+id/emailfield"
         android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        style="@style/AuthEditText"
         />

    </LinearLayout>

<ImageView
    android:id="@+id/buttonDivider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/keysLayout"
    android:layout_centerHorizontal="true"
    android:src="@drawable/button_divider"
    android:contentDescription="@string/buttonDivider"/>

    <Button
        android:id="@+id/signupbutton"
        android:text="@string/signup_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
         style="@style/AuthButton"/>

    <Button
        android:id="@+id/cancelbutton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton"

 />
</RelativeLayout>
